ecmascript/parser/tests/typescript-errors/tsc/expressions/typeGuards/typePredicateOnVariableDeclaration02/input.ts.stderr
error[1005]: Type predicate is not allowed here
 --> $DIR/tests/typescript-errors/tsc/expressions/typeGuards/typePredicateOnVariableDeclaration02/input.ts:3:10
  |
3 | var y: z is number;
  |          ^^

